[package]
name = "redisxann"
version = "0.1.0"
authors = ["weedge <weege007@gmail.com>"]
edition = "2021"
publish = ["git"]
#build = "build.rs"
description = "building Redis x ANN modules in Rust"
license = ""
repository = "https://github.com/RedisLabsModules/redismodule-rs"
readme = "README.md"
keywords = ["redis", "ann"]
categories = ["database", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "rust/lib.rs"

[dependencies]
redis-module = { version = "2.0.5", features = ["default"] }
usearch = "2.6.0"
faiss = { version = "0.12.1" }
hnsw_rs = "0.2.0"
cpu-time = { version = "1.0" }
rand = { version = "0.8" }
