[package]
# redisxann_faiss
name = "redisxann-faiss"
version = "0.1.0"
authors = ["weedge <weege007@gmail.com>"]
edition = "2021"
publish = ["git"]
#build = "build.rs"
description = "building Redis x ANN module faiss in Rust"
license = "MIT"
repository = "https://github.com/weedge/redisxann"
readme = "README.md"
keywords = ["redis", "ann", "faiss"]
categories = ["database", "vss"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
redis-module = { version = "2.0.5", features = ["default"] }
faiss = { version = "0.12.1" }

[dev-dependencies]
redis-module = { version = "2.0.5", features = ["default"] }
