[package]
# redisxann_hnsw
name = "redisxann-hnsw"
version = "0.1.0"
authors = ["weedge <weege007@gmail.com>"]
edition = "2021"
publish = ["git"]
#build = "build.rs"
description = "building Redis x ANN module hnsw in Rust"
license = "MIT"
repository = "https://github.com/weedge/redisxann"
readme = "README.md"
keywords = ["redis", "ann", "hnsw"]
categories = ["database", "vss"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
redis-module = { version = "2.0.5", features = ["default"] }
lazy_static = "1.4.0"
rand = "0.8.5"
ordered-float = { version = "4.1.0" }
owning_ref = "0.4.1"
#num = "0.4.1"
num-traits = "^0.2"
hnswcore = { path = "./hnswcore" }
