[package]
# redisxann_usearch
name = "redisxann-usearch"
version = "0.1.0"
authors = ["weedge <weege007@gmail.com>"]
edition = "2021"
publish = ["git"]
#build = "build.rs"
description = "building Redis x ANN module usearch in Rust"
license = "MIT"
repository = "https://github.com/weedge/redisxann"
readme = "README.md"
keywords = ["redis", "ann", "usearch"]
categories = ["database", "vss"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
redis-module = { version = "2.0.5", features = ["default"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
usearch = { version = "2.6.0", path = "../../deps/usearch" }
lazy_static = "1.4.0"
sonyflake = "0.2.0"

[dev-dependencies]
redis-module = { version = "2.0.5", features = ["default"] }
