[package]
name = "hnswcore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
ordered-float = { version = "4.1.0" }
owning_ref = "0.4.1"
#num = "0.4.1"
num-traits = "^0.2"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "metrics"
harness = false

[profile.bench]
opt-level = 3
debug = true
strip = false
